# 8-bit_cpu

./: .clang-format  README.md  meson.build  temp-shit.txt
examples/: ldr_str_example  simple_alu
include/: cpu.hpp  debug.hpp  instruction.hpp  logger.hpp  options.hpp  utils.hpp
src/: cpu.cpp  debug.cpp  instruction.cpp  logger.cpp  main.cpp  options.cpp  utils.cpp
utils/: bincreator.py
